// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog renders correctly 1`] = `
<div
  class="sc-pyfCe lgyeKy"
>
  <div />
  <div>
    <div
      class="mc-dialog--header"
    >
      <div />
      <button>
        ×
      </button>
    </div>
    <div
      class="mc-dialog--body"
    />
    <div
      class="mc-dialog--footer"
    >
      <div
        class="sc-eDvSVe goAuXT"
      >
        <button
          class="sc-dkrFOg gBSOcI"
        >
          Cancel
        </button>
      </div>
      <div
        class="sc-eDvSVe goAuXT"
      >
        <button
          class="sc-dkrFOg bUbFU"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog renders modal 1`] = `
<div
  class="sc-pyfCe lgyeKy"
>
  <div />
  <div>
    <div
      class="mc-dialog--header"
    >
      <div />
    </div>
    <div
      class="mc-dialog--body"
    />
    <div
      class="mc-dialog--footer"
    >
      <div
        class="sc-eDvSVe goAuXT"
      >
        <button
          class="sc-dkrFOg gBSOcI"
        >
          Cancel
        </button>
      </div>
      <div
        class="sc-eDvSVe goAuXT"
      >
        <button
          class="sc-dkrFOg bUbFU"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog renders with props 1`] = `
<div
  class="sc-pyfCe jUYZrt"
  open=""
>
  <div />
  <div>
    <div
      class="mc-dialog--header"
    >
      <div>
        Dialog Title
      </div>
      <button>
        ×
      </button>
    </div>
    <div
      class="mc-dialog--body"
    >
      Hello Dialog!
    </div>
    <div
      class="mc-dialog--footer"
    >
      <div
        class="sc-eDvSVe goAuXT"
      >
        <button
          class="sc-dkrFOg gBSOcI"
        >
          Cancel
        </button>
      </div>
      <div
        class="sc-eDvSVe goAuXT"
      >
        <button
          class="sc-dkrFOg bUbFU"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;
